<resources>
    <string name="app_name">Submission Capstone Project</string>
    <string name="title_movies">Movies</string>
    <string name="title_tvshow">TvShow</string>
    <string name="title_favorit">Favorite</string>
    <string name="title_favourite">favourite</string>
    <string name="favorite_movies">Favorite Movie</string>
    <string name="favorite_tv_shows">Favorite TV Show</string>
    <string name="baseUrlImage">https://image.tmdb.org/t/p/w500%s</string>
    <string name="no_data">Empty data</string>
    <string name="logo">logo</string>
    <string name="movies_amp_tvshow"><![CDATA[Movies & TvShow]]></string>
    <string name="the_movie_db_apps_nv_beta">THE MOVIE DB APPS\nV-BETA</string>
    <string name="by_dicodingbangkitbwa">By DicodingBangkitBWA</string>
    <string name="back">back</string>
    <string name="title">Title</string>
    <string name="rating">rating</string>
    <string name="like">like</string>
    <string name="des">Des</string>
    <string name="list_flim">List Flim</string>
    <string name="storyline">Storyline</string>
    <string name="movie">Movie</string>
    <string name="email">Email</string>
    <string name="tvshow">TvShow</string>
    <string name="username">Username</string>


</resources>